add java vm args for oracle 8